bb-96: fixed the alignment and styling of the header navbar dropdown.

--- a/src/main/react-ui/apps/app/src/styles.scss
+++ b/src/main/react-ui/apps/app/src/styles.scss
@@ -135,6 +135,13 @@ a {
   text-decoration: none;
 }
 
+.dropdown-item:hover,
+.dropdown-item:focus {
+  background-color: inherit;
+  text-decoration: underline;
+  text-underline-offset: 3px;
+}
+
 // .MuiSvgIcon-root {
 //   font-size: 1.2rem!important;
 // }
